mobile over-scrolling issue resolved: clipped images instead

--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ body {
     top: 48vh;
     z-index: -1;
     --animate-duration: 1.5s;
+    clip: rect(0px,1000px,500px,0px);
 }
 
 .sylvia {
@@ -104,6 +105,7 @@ body {
     top: 82vh;
     z-index: -1;
     --animate-duration: 1.5s;
+    clip: rect(0px,1000px,160px,0px);
 }
 
 .spikey {
